--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is MY."
+description: "Hey, this is yilimibomb."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
