one_product and test checklist

--- a/about.html
+++ b/about.html
@@ -4,3 +4,6 @@ title: "About"
 description: "Hey, this is yilimibomb."
 header-img: "img/post-bg-rwd.jpg"
 ---
+
+Hi，我是yilimibomb，一只产品喵，工作、学习之余，我还是一个b站翻译的up主，同时也非常喜欢看书。
+这是我的利用空闲时间搭建的个人博客。如果有什么问题，欢迎提出探讨~
